sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:5: error: '=' expected but ';' found.
    var a;
         ^